--- a/dcang2xlu.ipynb
+++ b/dcang2xlu.ipynb
@@ -17,9 +17,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "首次解析的网址返回状态： 200- https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\n",
+      "首次解析的网址返回状态： 200- http://home.jundie.top:81/top98.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://52pan.top:81/api/v3/file/get/174964/%E5%90%BE%E7%88%B1%E8%AF%84%E6%B5%8B.m3u?sign=rPssLoffquDXszCARt6UNF8MobSa1FA27XomzOluJBY%3D%3A0\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- https://www.lianyingtv.com/fast/fast\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- https://nxog.eu.org/nxog/ou1.php?b=欧歌\n",
+      "总线路条数： 26\n",
+      "成功路线条数： 25\n",
+      "首次解析的网址返回状态： 200- https://raw.liucn.cc/box/dc.txt\n",
+      "总线路条数： 52\n",
+      "成功路线条数： 33\n",
+      "首次解析的网址返回状态： 200- http://wl.iptv8.top/wl/a/1706600423.txt\n",
+      "总线路条数： 17\n",
+      "成功路线条数： 11\n",
+      "首次解析的网址返回状态： 200- https://qixing.myhkw.com/DC.txt\n",
+      "总线路条数： 38\n",
+      "成功路线条数： 26\n",
+      "首次解析的网址返回状态： 200- http://tvkj.top/DC.txt\n",
+      "总线路条数： 38\n",
+      "成功路线条数： 26\n",
+      "首次解析的网址返回状态： 200- http://39.101.135.137:8686\n",
+      "总线路条数： 30\n",
+      "成功路线条数： 22\n",
+      "首次解析的网址返回状态： 200- https://cdn.jsdelivr.net/gh/GaiVmao/dianshiyuan@main/yuan2.txt\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- https://pastebin.com/raw/sbPpDm9G\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- https://kjsc0310.github.io/tvy/jk9.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://home.jundie.top:81/TVBox/yosakoi.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- https://wsl201.github.io/mao/mao6.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://ztha.top/TVBox/thdjk.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://530.my3v.work/99668.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- https://pan.shangui.cc/f/mBYNHb/%E8%9A%82%E8%9A%81%E7%AA%9D2%E5%B1%80.txt\n",
+      "总线路条数： 58\n",
+      "成功路线条数： 33\n",
+      "首次解析的网址返回状态： 200- https://pan.shangui.cc/f/X2yqFd/%E8%9A%82%E8%9A%81%E7%AA%9D3%E5%B1%80.txt\n",
+      "总线路条数： 46\n",
+      "成功路线条数： 28\n",
+      "首次解析的网址返回状态： 200- https://pan.shangui.cc/f/KDpQc6/%EF%BB%BF%E8%9A%82%E8%9A%81%E7%AA%9D1%E5%B1%80.txt\n",
       "总线路条数： 102\n",
-      "成功路线条数： 88\n"
+      "成功路线条数： 58\n",
+      "首次解析的网址返回状态： 200- https://d.kstore.space/download/2904/236.txt\n",
+      "总线路条数： 14\n",
+      "成功路线条数： 11\n",
+      "首次解析的网址返回状态： 200- http://154.3.2.66:8889/down/YgOQS9WjkF6R.txt\n",
+      "总线路条数： 14\n",
+      "成功路线条数： 11\n",
+      "首次解析的网址返回状态： 200- http://530.my3v.work/qm.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://39.101.135.137:8686/\n",
+      "总线路条数： 30\n",
+      "成功路线条数： 21\n",
+      "首次解析的网址返回状态： 200- http://530.my3v.work/hxck.json\n",
+      "总线路条数： 36\n",
+      "成功路线条数： 21\n",
+      "首次解析的网址返回状态： 200- http://530.my3v.work/xdck.json\n",
+      "总线路条数： 42\n",
+      "成功路线条数： 27\n",
+      "首次解析的网址返回状态： 200- https://gitee.com/GK_6_0/json/raw/master/json.txt\n",
+      "总线路条数： 25\n",
+      "成功路线条数： 15\n",
+      "首次解析的网址返回状态： 200- https://jihulab.com/jw2/jyf/-/raw/main/jihu.json\n",
+      "总线路条数： 60\n",
+      "成功路线条数： 40\n",
+      "首次解析的网址返回状态： 200- http://pandown.pro/tvbox/tvbox.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://z.qiqiv.cn/123.txt\n",
+      "总线路条数： 14\n",
+      "成功路线条数： 11\n",
+      "首次解析的网址返回状态： 200- https://notabug.org/qizhen15800/My9394/raw/master/%e4%b8%8d%e8%89%af%e5%b8%85.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://cdn.qiaoji8.com/tvbox.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- https://download.kstore.space/download/2883/1022tv.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://jxym.ygx888.com/vip/api.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://9xi4o.tk/0725.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://xhztv.top/4k.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- http://xhztv.top/tvbox.txt\n",
+      "总线路条数： 14\n",
+      "成功路线条数： 9\n",
+      "首次解析的网址返回状态： 200- https://tv.youdu.fan:666\n",
+      "总线路条数： 14\n",
+      "成功路线条数： 14\n",
+      "首次解析的网址返回状态： 200- https://weixine.net/api.json\n",
+      "总线路条数： 4\n",
+      "成功路线条数： 2\n",
+      "首次解析的网址返回状态： 200- https://cf.weixine.net/api.json\n",
+      "总线路条数： 4\n",
+      "成功路线条数： 2\n",
+      "首次解析的网址返回状态： 200- https://gitlab.com/xmbjm/omg/-/raw/main/omg.json\n",
+      "解析失败11\n",
+      "首次解析的网址返回状态： 200- https://gitlab.com/xmbjm/dc/-/raw/main/sgdc.json\n",
+      "总线路条数： 49\n",
+      "成功路线条数： 40\n",
+      "首次解析的网址返回状态： 200- http://xktv6.icu/x\n",
+      "总线路条数： 17\n",
+      "成功路线条数： 14\n"
      ]
     }
    ],
@@ -138,13 +242,16 @@
     "            dict2={}\n",
     "            dict2['urls']=datas\n",
     "            savejson2=json.dumps(datas, indent=4, ensure_ascii=False)\n",
-    "            with open('tvboxdcjx.json', \"w\", encoding=\"utf-8\") as file:\n",
+    "            with open('tvboxdcjx.json', \"a\", encoding=\"utf-8\") as file:\n",
     "                file.write(savejson2)\n",
     "                file.close()\n",
     "        except:\n",
     "            print(\"解析失败11\")\n",
-    "jiexidc(url5)\n",
-    "\n"
+    "# jiexidc(url5)\n",
+    "with open('strsdc.txt', 'r', encoding='utf-8') as file:\n",
+    "    for line in file:\n",
+    "        lineurl=line.strip()\n",
+    "        jiexidc(lineurl)\n"
    ]
   }
  ],
