--- a/text_read_proxy.ipynb
+++ b/text_read_proxy.ipynb
@@ -9,95 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "解析失败了:  其他failure -https://agit.ai/pinghui/xinghe/raw/branch/master/mayicang.txt\n",
-      "解析失败了:  其他failure -https://www.ywsj.cf/upload/2023/10/yyzq4k.json\n",
-      "首次解析状态:200 线路-http://8.210.232.168/xc.json\n",
-      "首次解析状态:200 其他failure -http://饭太硬.top/tv\n",
-      "解析失败了:  其他failure -http://我不是.肥猫.love:63\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://gitee.com/shenxian2023/web/raw/master/sx.json\n",
-      "解析失败了:  其他failure -http://www.xzam.cn/xiaohu\n",
-      "首次解析状态:200 线路-https://tvbox.meitufu.com/TVBox/tv.json\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://yydsys.top/duo\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=http://小盒酷玩.fun:66/\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://download.kstore.space/download/3313/app/ymzn\n",
-      "解析失败了:  其他failure -ttps://jihulab.com/zhulr7765/tvbox/-/raw/main/tv.txt?ref_type=heads\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://raw.gitmirror.com/yydfys/yydf/main/yydf/yydf.json\n",
-      "首次解析状态:200 线路-https://weixine.net/ysc.json\n",
-      "首次解析状态:200 线路-https://cf.weixine.net/ysc.json\n",
-      "解析失败了:  其他failure -http://52bsj.vip:98/cl\n",
-      "首次解析状态:200 其他failure -https://wds.ecsxs.com/230989.json\n",
-      "解析失败了:  其他failure -https://agit.ai/ddx/nmys/raw/branch/master/feimao.json\n",
-      "首次解析状态:200 线路-https://s2.pub/xmbjmxdc\n",
-      "解析失败了:  其他failure -https://agit.ai/cyl518/yl/raw/branch/master/pytv.json\n",
-      "首次解析状态:200 线路-https://jihulab.com/yw88075/tvbox/-/raw/main/dr/js.json\n",
-      "首次解析状态:200 其他failure -https://atomgit.com/xghvrf/Xvbjffc/raw/master/xbfbe.json\n",
-      "解析失败了:  其他failure -https://tvbox.cainisi.cf\n",
-      "首次解析状态:200 其他failure -http://rihou.vip:88/荷城茶秀\n",
-      "解析失败了:  其他failure -http://itvbox.cc/tvbox/云星日记/1.m3u8\n",
-      "解析失败了:  其他failure -https://agit.ai/Yoursmile7/TVBox/raw/branch/master/XC.json\n",
-      "解析失败了:  其他failure -http://meowtv.cn/tv\n",
-      "首次解析状态:200 线路-https://pastebin.com/raw/5NHaxyGR\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=http://svip.weixine.net:88/uploads/itvbox/svip.json\n",
-      "首次解析状态:200 其他failure -http://xn--yety82d.love/\n",
-      "首次解析状态:200 线路-http://xhww.fun:63/小米/DEMO.json\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://atomgit.com/iduo/DDBox/raw/master/duo.json\n",
-      "首次解析状态:200 其他failure -http://rihou.vip:55/\n",
-      "首次解析状态:200 单仓-http://home.jundie.top:81/top98.json\n",
-      "解析失败了:  其他failure -http://rihou.cc:88/\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://cn.kstore.space/download/2863/01.txt\n",
-      "解析失败了:  其他failure -http://xiaohu.xzam.cn/xiaohu\n",
-      "解析失败了:  其他failure -https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.jsonkvymin\n",
-      "解析失败了:  其他failure -https://agit.ai/kvymin/TVBox/raw/branch/master/Pandora.json\n",
-      "解析失败了:  其他failure -https://agit.ai/n/b/raw/branch/a/b/c.json\n",
-      "首次解析状态:200 单仓-http://52pan.top:81/api/v3/file/get/174964/%E5%90%BE%E7%88%B1%E8%AF%84%E6%B5%8B.m3u?sign=rPssLoffquDXszCARt6UNF8MobSa1FA27XomzOluJBY%3D%3A0\n",
-      "解析失败了:  其他failure -http://yydf.540734621.xyz/yydf/yydf/bd/yydf.jsonzzz1\n",
-      "解析失败了:  其他failure -https://agit.ai/mmmgit/tvbox/raw/branch/main/zzz1.json\n",
-      "解析失败了:  其他failure -https://agit.ai/cyl518/yl/raw/branch/master/ml.json\n",
-      "首次解析状态:200 单仓-https://www.lianyingtv.com/fast/fast\n",
-      "解析失败了:  其他failure -https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\n",
-      "解析失败了:  其他failure -https://raw.githubusercontent.com/xmbjm/xmbjmjk/main/xmbjm.json\n",
-      "解析失败了:  其他failure -https://o.nxog.top/nxog/nxog1.php?b=欧歌\n",
-      "解析失败了:  其他failure -https://o.nxog.top/nxog/ou1.php?b=欧歌\n",
-      "解析失败了:  其他failure -https://w.nxog.top/nxog/nxog1.php?b=欧歌\n",
-      "解析失败了:  其他failure -https://w.nxog.top/nxog/ou1.php?b=欧歌\n",
-      "首次解析状态:200 多仓-https://nxog.eu.org/nxog/nxog1.php?b=欧歌\n",
-      "首次解析状态:200 单仓-https://nxog.eu.org/nxog/ou1.php?b=欧歌\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://atomgit.com/hengxing/hx/raw/master/hxzck.txt\n",
-      "解析失败了:  其他failure -https://raw.githubusercontent.com/ZTHA000/tvbox/main/gyck.json\n",
-      "解析失败了:  其他failure -https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
-      "首次解析状态:200 线路-http://sinopacifichk.com/box/56.txt\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://la.kstore.space/download/3376/xpg.txt\n",
-      "解析失败了:  其他failure -https://agit.ai/XiaoYiChaHang/xxzb/raw/branch/master/ysj.json\n",
-      "解析失败了:  其他failure -https://agit.ai/sejinan/app/raw/branch/box/yu\n",
-      "解析失败了:  其他failure -https://raw.githubusercontent.com/mengzehe/tvbox/main/%E8%87%AA%E7%94%A8%E5%A4%9A%E4%BB%93\n",
-      "首次解析状态:200 单仓-https://raw.liucn.cc/box/dc.txt\n",
-      "解析失败了:  其他failure -https://www.agit.ai/hu/hcr/raw/branch/master/99668.txt\n",
-      "解析失败了:  其他failure -https://raw.githubusercontent.com/yyfxz/yyrh/main/fxz.json\n",
-      "解析失败了:  其他failure -http://yydf.540734621.xyz/yydf/yydf/yydf.json\n",
-      "解析失败了:  其他failure -https://raw.githubusercontent.com/yydfys/yydf/main/yydf/yydfjk.json\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://atomgit.com/66dashun/xiazheng/raw/master/d.json\n",
-      "首次解析状态:200 单仓-http://wl.iptv8.top/wl/a/1706600423.txt\n",
-      "首次解析状态:200 其他failure -https://肥猫.live/\n",
-      "解析失败了:  其他failure -https://agit.ai/ddx/TVBox/raw/branch/master/d.json\n",
-      "解析失败了:  其他failure -https://tvkj888.cn/tvys/svip.json\n",
-      "首次解析状态:200 单仓-https://qixing.myhkw.com/DC.txt\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://qixing.myhkw.com/tianwei/svip.json\n",
-      "首次解析状态:200 单仓-http://tvkj.top/DC.txt\n",
-      "首次解析状态:200 单仓-http://39.101.135.137:8686\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://gitee.com/guot54/YGBH777/raw/main/dc2.json\n",
-      "代理1网址状态: 200 其他failure -http://lige.unaux.com/?url=https://gitee.com/guot54/YGBH777/raw/main/ygbox.json\n",
-      "解析失败了:  其他failure -https://raw.githubusercontent.com/guot55/yg/main/dc2.json\n",
-      "首次解析状态:200 线路-http://39.101.135.137:8080/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -123,6 +37,126 @@
     "            return \"H单仓\"\n",
     "    else:\n",
     "        return \"H多仓\"\n",
+    "    \n",
+    "def addlink(url): #增加代理链接\n",
+    "    agentlink=\"http://fly.lyin.cf/?url=\"\n",
+    "    agentlink1=\"http://lige.unaux.com/?url=\"\n",
+    "    agentlink0=\"\"\n",
+    "    urll=agentlink1+url\n",
+    "    # print(\"代理网址： \"+urll)\n",
+    "    return urll\n",
+    "\n",
+    "def re_findall(url): #输入原始url,解析网站，返回url，respone等元组\n",
+    "    headers={\n",
+    "    \"Cookie\":\"Hm_lvt_d815f2e1f682c86565c1063aafaef292=1715176162; Hm_lpvt_d815f2e1f682c86565c1063aafaef292=1715176162; tfstk=fxg2k1gSVEL2a_igU8aaUOQXoJ4YWypCbVw_sfV4e-4scq_Z4XMWMi_ssRkZF8HaXIe_IRkssmOWReGxMPUg7pTBRYdKSDg4IOagkckz-p9BRUGxMPUMdc6Dftlz68fcjoDgru281Z4gnlXlqW2uIP4iI74uTSfcmZqGZ7DZTXhNG5ZDHRmfw4bLXoyngkQG747Q0Jc0UNV-zS7gKj2PSNwY5nQEaj9VJbaxZvPIhUbqLbGIku3wLErxrXu80VCN2bZL3z2xcK78gxGZ8u0D16wmyf0L4y-Od83tZDZL-tj0Try4xqD5sB40j540Hm9VySkj_2rooCsQwcD-7raHJt2sVXua_Vp9zvlSOqE-7p8l4NBTZ0ZxWmWGboV8aJOyZMO1RXe6S7PCXGEYo7yBizIGj9QN5iu6ZGITDWVzdI4O.; __test=1af893b932aa21ad543a801402580fba\",\n",
+    "    \"Host\":\"lige.unaux.com\",\n",
+    "    \"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36\",\n",
+    "    \"Connection\":\"keep-alive\"\n",
+    "    }\n",
+    "    proxy_url=addlink(url)  #增加代理函数\n",
+    "    try:\n",
+    "        respon=requests.get(url)\n",
+    "        codema= respon.status_code\n",
+    "        if codema==200:\n",
+    "            # print(\"首次解析的网址返回状态： \"+str(codema)+\"- \"+url)\n",
+    "            conten=\"首次解析状态:\"+str(codema)\n",
+    "            return url,respon.text,conten\n",
+    "        else:\n",
+    "            respon1=requests.get(proxy_url,headers=headers)  #增加代理1函数\n",
+    "            codema1= respon1.status_code\n",
+    "            # print(\"代理1网址返回状态： \"+str(codema)+\"- \"+proxy_url)\n",
+    "            conten1=\"代理1网址状态: \"+str(codema1)\n",
+    "            return proxy_url,respon1.text,conten1\n",
+    "    except:\n",
+    "        try:\n",
+    "            respon2=requests.get(proxy_url,headers=headers)  #增加代理2函数\n",
+    "            codema2= respon2.status_code,conten\n",
+    "            # print(\"代理2网址返回状态： \"+str(codema)+\"- \"+proxy_url)\n",
+    "            conten2=\"代理2网址状态: \"+str(codema2)\n",
+    "            return proxy_url,respon2.text,conten2\n",
+    "        except:\n",
+    "            # print(\"解析失败： \"+url)\n",
+    "            return url,\"000\",\"解析失败了: \"\n",
+    "\n",
+    "url1=\"http://rihou.vip:66/\"   #  -花式主页\n",
+    "url11=\"http://lige.unaux.com/?url=https://o.nxog.top/nxog/nxog1.php?b=欧歌\" #多仓\n",
+    "url2=\"http://xn--6orp08a.4tvbox.v6.navy/无敌.json\"     #  -反炸\n",
+    "url3=\"https://agit.ai/leevi/PiG/raw/branch/master/jsm.json\"  #  -失败\n",
+    "url4=\"https://tvbox.meitufu.com/TVBox/tv.json\" #线路\n",
+    "url5=\"https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\" #-单仓\n",
+    "url6=\"http://530.my3v.work/xdck.json\" #-单仓\n",
+    "url7=\"https://cdn.jsdelivr.net/gh/GaiVmao/dianshiyuan@main/yuan2.txt\" #-单线\n",
+    "url8=\"https://raw.githubusercontent.com/xiqiliuse/tvbox/main/tvbox.json\"\n",
+    "url9=\"http://gh.whoneil.top/https://raw.githubusercontent.com/xiqiliuse/tvbox/main/tvbox.json\"\n",
+    "\n",
+    "def jiexi(urll):\n",
+    "        analysis_respone=re_findall(urll) #返回元组，第一个是url，第二个是respon，第三个是状态内容\n",
+    "        # cang=findvalue(analysis_respone[1])\n",
+    "        cang=refindvalue(analysis_respone[1])\n",
+    "        # print(\"shuchu--\",cang,analysis_respone)\n",
+    "\n",
+    "        if cang==\"H单仓\":\n",
+    "            print(analysis_respone[2]+\" 单仓\"+\"-\"+analysis_respone[0])\n",
+    "        elif cang==\"H多仓\":\n",
+    "            print(analysis_respone[2] +\" 多仓\"+\"-\"+analysis_respone[0])\n",
+    "        elif cang==\"H线路\":\n",
+    "            print(analysis_respone[2]+\" 线路\"+\"-\"+analysis_respone[0])\n",
+    "        else:\n",
+    "            # pass\n",
+    "            print(analysis_respone[2]+\" 其他failure \"+\"-\"+analysis_respone[0])\n",
+    "        # print(\"=\"*30)\n",
+    "\n",
+    "# jiexi(url11)\n",
+    "# jiexi(url1)\n",
+    "# jiexi(url2)\n",
+    "# jiexi(url3)\n",
+    "# jiexi(url4)\n",
+    "# jiexi(url5)\n",
+    "\n",
+    "# 打开文件并读取内容\n",
+    "with open('strs.txt', 'r', encoding='utf-8') as file:\n",
+    "    for line in file:\n",
+    "        lineurl=line.strip()\n",
+    "        jiexi(lineurl)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "调整线路的re正则 顺序，先识别线路，后多仓，在后单仓"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import re,os\n",
+    "\n",
+    "def refindvalue(respon): #输入respond,re正则判断单仓多仓，返回cang自定义文本\n",
+    "    #mcang=re.search('storeHouse',respon,re.M|re.I).group()\n",
+    "    #scang = re.search('urls',respon,re.M|re.I).group()\n",
+    "    #xlu = re.search('sites',respon,re.M|re.I).group()\n",
+    "    try: #正常的操作\n",
+    "        mcang = re.search('sites',respon,re.M|re.I).group()\n",
+    "    except :#发生异常，执行这块代码\n",
+    "        try:\n",
+    "            scang = re.search('storeHouse',respon,re.M|re.I).group()\n",
+    "        except:#发生异常，执行这块代码\n",
+    "            try:\n",
+    "                xlu = re.search('urls',respon,re.M|re.I).group()\n",
+    "            except:#发生异常，执行这块代码\n",
+    "                return \"正则失败\"\n",
+    "            else: #如果没有异常执行这块代码\n",
+    "                return \"H单仓\"\n",
+    "        else:\n",
+    "            return \"H多仓\"\n",
+    "    else:\n",
+    "        return \"H线路\"\n",
     "    \n",
     "def addlink(url): #增加代理链接\n",
     "    agentlink=\"http://fly.lyin.cf/?url=\"\n",
