--- a/ipy_readexcel.ipynb
+++ b/ipy_readexcel.ipynb
@@ -567,22 +567,24 @@
     "        # print(\"=\"*30)\n",
     "\n",
     "i=1\n",
+    "# excel_file = os.getcwd()+\"/excel_xianlu.xlsx\"\n",
     "excel_file = r'D:\\lxd\\learn\\py\\tvbox\\excel_xianlu.xlsx'\n",
     "workbook = openpyxl.load_workbook(filename=excel_file)\n",
     "# sheet = workbook['Sheet1']\n",
-    "sheet2= workbook['Sheet3']\n",
+    "sheet2= workbook['Sheet2']\n",
     "for row in sheet2.iter_rows(values_only=True):\n",
     "    # print(row[1])\n",
     "    if not (row[1]) is None :\n",
     "        analysis_respone=re_findall(row[1]) \n",
-    "        strtxt=refindvalue(analysis_respone[1])\n",
-    "        sheet2.cell(row = i,column = 3,value = strtxt)\n",
-    "        \n",
-    "        print(row[1],i,strtxt)\n",
+    "        strtxt=refindvalue(analysis_respone[2])\n",
+    "        codetxt=analysis_respone[2]\n",
+    "        sheet2.cell(row = i,column = 5,value = strtxt)\n",
+    "        sheet2.cell(row = i,column = 6,value = codetxt)\n",
+    "        print(row[1],i,strtxt,codetxt)\n",
     "    else:\n",
     "        break\n",
     "    i=i+1\n",
-    "workbook.save(filename = \"excel_0517.xlsx\")"
+    "workbook.save(filename = \"excel_0517pm.xlsx\")"
    ]
   }
  ],
