--- a/ipy_excel2urls.ipynb
+++ b/ipy_excel2urls.ipynb
@@ -106,9 +106,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"name\": \"小白龙\",\n",
+      "        \"url\": \"http://39.101.135.137:8080/\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"🔘吾爱3\",\n",
+      "        \"url\": \"http://52pan.top:81/api/v3/file/get/174964/%E5%90%BE%E7%88%B1%E8%AF%84%E6%B5%8B.m3u?sign=rPssLoffquDXszCARt6UNF8MobSa1FA27XomzOluJBY%3D%3A0\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"吾爱线路\",\n",
+      "        \"url\": \"http://52pan.top:81/api/v3/file/get/174964/吾爱评测.m3u?sign=rPssLoffquDXszCARt6UNF8MobSa1FA27XomzOluJBY%3D%3A0\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"XC1\",\n",
+      "        \"url\": \"http://8.210.232.168/xc.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"TK\",\n",
+      "        \"url\": \"http://9xi4o.tk/0725.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"BP\",\n",
+      "        \"url\": \"http://bp.tvbox.cam\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"🔘巧记\",\n",
+      "        \"url\": \"http://cdn.qiaoji8.com/tvbox.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"俊佬线路\",\n",
+      "        \"url\": \"http://home.jundie.top:81/top98.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"YGX888\",\n",
+      "        \"url\": \"http://jxym.ygx888.com/vip/api.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"欧歌\",\n",
+      "        \"url\": \"http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&123&b=欧歌\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"💦思牧丨巧技巧技\",\n",
+      "        \"url\": \"http://pandown.pro/tvbox/tvbox.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"万达影视\",\n",
+      "        \"url\": \"http://sinopacifichk.com/box/56.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"小米线路\",\n",
+      "        \"url\": \"http://xhww.fun:63/小米/DEMO.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"XHZ\",\n",
+      "        \"url\": \"http://xhztv.top/4k.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"XHZ2\",\n",
+      "        \"url\": \"http://xhztv.top/xhz.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"XHZ3\",\n",
+      "        \"url\": \"http://xktv6.icu/d/\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"摸鱼\",\n",
+      "        \"url\": \"http://我不是.摸鱼儿.top\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"🔘骚零\",\n",
+      "        \"url\": \"https://100km.top/0\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"运输车加速\",\n",
+      "        \"url\": \"https://cf.weixine.net/ysc.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"🍚饭太硬多仓仓库\",\n",
+      "        \"url\": \"https://download.kstore.space/download/2883/1022tv.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"🍚饭太硬多仓仓库\",\n",
+      "        \"url\": \"https://download.kstore.space/download/2883/nzk/nzk0722.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"小鱼\",\n",
+      "        \"url\": \"https://download.kstore.space/download/4645/Tvbox/myks/99.png\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"QLKJ\",\n",
+      "        \"url\": \"https://gitee.com/zhaodehe/qlkj/raw/master/ql.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"🚀高天JS\",\n",
+      "        \"url\": \"https://github.moeyy.xyz/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"拾光T4线路：\",\n",
+      "        \"url\": \"https://gitlab.com/xmbjm/dc/-/raw/main/T4.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"拾光单线路：\",\n",
+      "        \"url\": \"https://gitlab.com/xmbjm/omg/-/raw/main/omg.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"机缘巧盒凯弟\",\n",
+      "        \"url\": \"https://jihulab.com/jyqhkd1/jk/-/raw/main/机缘巧盒凯弟.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"心魔线路\",\n",
+      "        \"url\": \"https://jihulab.com/yw88075/tvbox//raw/main/dr/js.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"魔饭单仓\",\n",
+      "        \"url\": \"https://jihulab.com/yw88075/tvbox/-/raw/main/dr/js.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"宝盒VIP\",\n",
+      "        \"url\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/guot55/YGBH/main/vip2.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"HeCheng\",\n",
+      "        \"url\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/HeChengChaXiu/tvbox/main/hccx.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"爱TV自营接口单仓\",\n",
+      "        \"url\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/txtvv/txtv/main/tvbox/0326.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"拾光4K\",\n",
+      "        \"url\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"拾光\",\n",
+      "        \"url\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/xmbjm/xmbjmjk/main/xmbjm.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"🔘江雅\",\n",
+      "        \"url\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"ydc\",\n",
+      "        \"url\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/yudengcheng/ydcbox/main/ydc.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"德福苑\",\n",
+      "        \"url\": \"https://notabug.org/afecc/tvbox/raw/main/dfy.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"风\",\n",
+      "        \"url\": \"https://notabug.org/kite/feng/raw/master/feng.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"WIND\",\n",
+      "        \"url\": \"https://notabug.org/kite/wind/raw/master/wind.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"qizheng\",\n",
+      "        \"url\": \"https://notabug.org/qizhen15800/My9394/raw/master/%e4%b8%8d%e8%89%af%e5%b8%85.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": 11,\n",
+      "        \"url\": \"https://pan.shangui.cc/f/4LBAF0/ali.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"最牛逼接口\",\n",
+      "        \"url\": \"https://pan.shangui.cc/f/lmP0Hk/mao4.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": 22,\n",
+      "        \"url\": \"https://pan.shangui.cc/f/mPecb/%E9%87%87%E9%9B%86.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"道长线路\",\n",
+      "        \"url\": \"https://pastebin.com/raw/5NHaxyGR\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"卧龙资源\",\n",
+      "        \"url\": \"https://pastebin.com/raw/gtbKvnE1\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"yw88075\",\n",
+      "        \"url\": \"https://raw.gitmirror.com/yw88075/tvbox/main/dr/js.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"🔘刘备\",\n",
+      "        \"url\": \"https://raw.liucn.cc/box/m.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"s2\",\n",
+      "        \"url\": \"https://s2.pub/cally\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"熊猫不叫猫\",\n",
+      "        \"url\": \"https://s2.pub/xmbjmxdc\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"sz\",\n",
+      "        \"url\": \"https://szyyds.cn/tv/x.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"太阳\",\n",
+      "        \"url\": \"https://tvbox.meitufu.com/TVBox/tv.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"ysc\",\n",
+      "        \"url\": \"https://weixine.net/ysc.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"恋影线路\",\n",
+      "        \"url\": \"https://www.lianyingtv.com/fast/fast\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"🚀骚零线路\",\n",
+      "        \"url\": \"https://xhdwc.tk/0\"\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "from openpyxl import load_workbook\n",
