--- a/ipy_excel2urls.ipynb
+++ b/ipy_excel2urls.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "增加列表中的字典"
+    "增加列表中的字典 url"
    ]
   },
   {
@@ -348,6 +348,179 @@
     "    # dict.update(name=row[0],url=row[1])\n",
     "    dict[\"name\"]=row[0]\n",
     "    dict[\"url\"]=row[1]\n",
+    "    listdict.append(dict.copy())\n",
+    "# print(listdict)\n",
+    "dict_loaded = json.dumps(listdict, indent=4, ensure_ascii=False)\n",
+    "print(dict_loaded)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "多仓json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"sourceName\": \"🌟星星影视\",\n",
+      "        \"sourceUrl\": \"http://154.3.2.66:8889/down/YgOQS9WjkF6R.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"多线路\",\n",
+      "        \"sourceUrl\": \"http://39.101.135.137:8686\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"🛀🏻小白影视\",\n",
+      "        \"sourceUrl\": \"http://39.101.135.137:8686/\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"🥝金鹰影视\",\n",
+      "        \"sourceUrl\": \"http://530.my3v.work/99668.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"🎇恒星影视\",\n",
+      "        \"sourceUrl\": \"http://530.my3v.work/hxck.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"🌴青木影视\",\n",
+      "        \"sourceUrl\": \"http://530.my3v.work/qm.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"💖心动影视\",\n",
+      "        \"sourceUrl\": \"http://530.my3v.work/xdck.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"天微接口\",\n",
+      "        \"sourceUrl\": \"http://tvkj.top/DC.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"西夏仓\",\n",
+      "        \"sourceUrl\": \"http://wl.iptv8.top/wl/a/1706600423.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"xhz\",\n",
+      "        \"sourceUrl\": \"http://xhztv.top/tvbox.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"运输车加速\",\n",
+      "        \"sourceUrl\": \"https://cf.weixine.net/api.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"🍚饭太硬仓库\",\n",
+      "        \"sourceUrl\": \"https://d.kstore.space/download/2904/236.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"💠水大侠影视仓库\",\n",
+      "        \"sourceUrl\": \"https://gitee.com/GK_6_0/json/raw/master/json.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"拾光精选单仓线路：\",\n",
+      "        \"sourceUrl\": \"https://gitlab.com/xmbjm/dc/-/raw/main/sgdc.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"📺追剧吧影视\",\n",
+      "        \"sourceUrl\": \"https://jihulab.com/jw2/jyf/-/raw/main/jihu.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"推荐仓库2\",\n",
+      "        \"sourceUrl\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/supermeguo/BoxRes/main/Myuse/lemon.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"推荐仓库1\",\n",
+      "        \"sourceUrl\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/tianya7981/jiekou/main/0709\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"心动仓库\",\n",
+      "        \"sourceUrl\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/txtvv/txtv/main/ku/心动仓库.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"爱TV自营接口\",\n",
+      "        \"sourceUrl\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/txtvv/txtv/main/tvbox/cang.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"🥥拾光源口\",\n",
+      "        \"sourceUrl\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/xmbjm/xmbjm/main/xmbjmdc.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"业余日后单仓\",\n",
+      "        \"sourceUrl\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/yyfxz/yyrh/main/fxz.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"挺好\",\n",
+      "        \"sourceUrl\": \"https://mirror.ghproxy.com/https://raw.githubusercontent.com/ZTHA000/tvbox/main/gyck.json\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"欧歌单仓\",\n",
+      "        \"sourceUrl\": \"https://nxog.eu.org/nxog/ou1.php?b=欧歌\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"🎎蚂蚁影视\",\n",
+      "        \"sourceUrl\": \"https://pan.shangui.cc/f/KDpQc6/%EF%BB%BF%E8%9A%82%E8%9A%81%E7%AA%9D1%E5%B1%80.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"蚂蚁窝1局\",\n",
+      "        \"sourceUrl\": \"https://pan.shangui.cc/f/KDpQc6/﻿蚂蚁窝1局.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"🍷蚂蚁影视二仓库\",\n",
+      "        \"sourceUrl\": \"https://pan.shangui.cc/f/mBYNHb/%E8%9A%82%E8%9A%81%E7%AA%9D2%E5%B1%80.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"蚂蚁窝2局\",\n",
+      "        \"sourceUrl\": \"https://pan.shangui.cc/f/mBYNHb/蚂蚁窝2局.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"🍷蚂蚁影视三仓库\",\n",
+      "        \"sourceUrl\": \"https://pan.shangui.cc/f/X2yqFd/%E8%9A%82%E8%9A%81%E7%AA%9D3%E5%B1%80.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"蚂蚁窝3局\",\n",
+      "        \"sourceUrl\": \"https://pan.shangui.cc/f/X2yqFd/蚂蚁窝3局.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"天微多线路\",\n",
+      "        \"sourceUrl\": \"https://qixing.myhkw.com/DC.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"刘备精选单仓\",\n",
+      "        \"sourceUrl\": \"https://raw.liucn.cc/box/dc.txt\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"有毒\",\n",
+      "        \"sourceUrl\": \"https://tv.youdu.fan:666\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"sourceName\": \"weixi\",\n",
+      "        \"sourceUrl\": \"https://weixine.net/api.json\"\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "from openpyxl import load_workbook\n",
+    "excel_file = r'D:\\lxd\\learn\\py\\tvbox\\excel_xianlu.xlsx'\n",
+    "workbook = load_workbook(filename=excel_file)\n",
+    "# sheet = workbook.active  # 获取活动工作表\n",
+    "sheet = workbook['dc']  # 根据名称获取工作表\n",
+    "dict={}\n",
+    "listdict=[]\n",
+    "for row in sheet.iter_rows(values_only=True):\n",
+    "    # print(row[0],row[1])\n",
+    "    # dict.update(name=row[0],url=row[1])\n",
+    "    dict[\"sourceName\"]=row[0]\n",
+    "    dict[\"sourceUrl\"]=row[1]\n",
     "    listdict.append(dict.copy())\n",
     "# print(listdict)\n",
     "dict_loaded = json.dumps(listdict, indent=4, ensure_ascii=False)\n",
