--- a/ipy_readexcel.ipynb
+++ b/ipy_readexcel.ipynb
@@ -404,7 +404,7 @@
     "    # print(\"代理网址： \"+urll)\n",
     "    return urll\n",
     "\n",
-    "def re_findall(url): #输入原始url,解析网站，返回url，respone等元组\n",
+    "def url_respon(url): #输入原始url,解析网站，返回url，respone等元组\n",
     "    headers={\n",
     "    \"Cookie\":\"Hm_lvt_d815f2e1f682c86565c1063aafaef292=1715176162; Hm_lpvt_d815f2e1f682c86565c1063aafaef292=1715176162; tfstk=fxg2k1gSVEL2a_igU8aaUOQXoJ4YWypCbVw_sfV4e-4scq_Z4XMWMi_ssRkZF8HaXIe_IRkssmOWReGxMPUg7pTBRYdKSDg4IOagkckz-p9BRUGxMPUMdc6Dftlz68fcjoDgru281Z4gnlXlqW2uIP4iI74uTSfcmZqGZ7DZTXhNG5ZDHRmfw4bLXoyngkQG747Q0Jc0UNV-zS7gKj2PSNwY5nQEaj9VJbaxZvPIhUbqLbGIku3wLErxrXu80VCN2bZL3z2xcK78gxGZ8u0D16wmyf0L4y-Od83tZDZL-tj0Try4xqD5sB40j540Hm9VySkj_2rooCsQwcD-7raHJt2sVXua_Vp9zvlSOqE-7p8l4NBTZ0ZxWmWGboV8aJOyZMO1RXe6S7PCXGEYo7yBizIGj9QN5iu6ZGITDWVzdI4O.; __test=1af893b932aa21ad543a801402580fba\",\n",
     "    \"Host\":\"lige.unaux.com\",\n",
@@ -428,7 +428,7 @@
     "    except:\n",
     "        try:\n",
     "            respon2=requests.get(proxy_url,headers=headers)  #增加代理2函数\n",
-    "            codema2= respon2.status_code,conten\n",
+    "            codema2= respon2.status_code\n",
     "            # print(\"代理2网址返回状态： \"+str(codema)+\"- \"+proxy_url)\n",
     "            conten2=\"代理2网址状态: \"+str(codema2)\n",
     "            return proxy_url,respon2.text,conten2\n",
@@ -438,7 +438,7 @@
     "\n",
     "\n",
     "def jiexi(urll):\n",
-    "        analysis_respone=re_findall(urll) #返回元组，第一个是url，第二个是respon，第三个是状态内容\n",
+    "        analysis_respone=url_respon(urll) #返回元组，第一个是url，第二个是respon，第三个是状态内容\n",
     "        # cang=findvalue(analysis_respone[1])\n",
     "        cang=refindvalue(analysis_respone[1])\n",
     "        # print(\"shuchu--\",cang,analysis_respone)\n",
@@ -462,7 +462,7 @@
     "for row in sheet2.iter_rows(values_only=True):\n",
     "    # print(row[1])\n",
     "    if not (row[1]) is None :\n",
-    "        analysis_respone=re_findall(row[1]) \n",
+    "        analysis_respone=url_respon(row[1]) \n",
     "        strtxt=refindvalue(analysis_respone[1])\n",
     "        sheet2.cell(row = i,column = 3,value = strtxt)\n",
     "        \n",
@@ -516,7 +516,7 @@
     "    # print(\"代理网址： \"+urll)\n",
     "    return urll\n",
     "\n",
-    "def re_findall(url): #输入原始url,解析网站，返回url，respone等元组\n",
+    "def url_respon(url): #输入原始url,解析网站，返回url，respone等元组\n",
     "    headers={\n",
     "    \"Cookie\":\"Hm_lvt_d815f2e1f682c86565c1063aafaef292=1715176162; Hm_lpvt_d815f2e1f682c86565c1063aafaef292=1715176162; tfstk=fxg2k1gSVEL2a_igU8aaUOQXoJ4YWypCbVw_sfV4e-4scq_Z4XMWMi_ssRkZF8HaXIe_IRkssmOWReGxMPUg7pTBRYdKSDg4IOagkckz-p9BRUGxMPUMdc6Dftlz68fcjoDgru281Z4gnlXlqW2uIP4iI74uTSfcmZqGZ7DZTXhNG5ZDHRmfw4bLXoyngkQG747Q0Jc0UNV-zS7gKj2PSNwY5nQEaj9VJbaxZvPIhUbqLbGIku3wLErxrXu80VCN2bZL3z2xcK78gxGZ8u0D16wmyf0L4y-Od83tZDZL-tj0Try4xqD5sB40j540Hm9VySkj_2rooCsQwcD-7raHJt2sVXua_Vp9zvlSOqE-7p8l4NBTZ0ZxWmWGboV8aJOyZMO1RXe6S7PCXGEYo7yBizIGj9QN5iu6ZGITDWVzdI4O.; __test=1af893b932aa21ad543a801402580fba\",\n",
     "    \"Host\":\"lige.unaux.com\",\n",
@@ -540,7 +540,7 @@
     "    except:\n",
     "        try:\n",
     "            respon2=requests.get(proxy_url,headers=headers,verify=False,timeout =60)  #增加代理2函数\n",
-    "            codema2= respon2.status_code,conten\n",
+    "            codema2= respon2.status_code\n",
     "            # print(\"代理2网址返回状态： \"+str(codema)+\"- \"+proxy_url)\n",
     "            conten2=\"代理2网址状态: \"+str(codema2)\n",
     "            return proxy_url,respon2.text,conten2\n",
@@ -550,7 +550,7 @@
     "\n",
     "\n",
     "def jiexi(urll):\n",
-    "        analysis_respone=re_findall(urll) #返回元组，第一个是url，第二个是respon，第三个是状态内容\n",
+    "        analysis_respone=url_respon(urll) #返回元组，第一个是url，第二个是respon，第三个是状态内容\n",
     "        # cang=findvalue(analysis_respone[1])\n",
     "        cang=refindvalue(analysis_respone[1])\n",
     "        # print(\"shuchu--\",cang,analysis_respone)\n",
@@ -575,7 +575,7 @@
     "for row in sheet2.iter_rows(values_only=True):\n",
     "    # print(row[1])\n",
     "    if not (row[1]) is None :\n",
-    "        analysis_respone=re_findall(row[1]) \n",
+    "        analysis_respone=url_respon(row[1]) \n",
     "        strtxt=refindvalue(analysis_respone[2])\n",
     "        codetxt=analysis_respone[2]\n",
     "        sheet2.cell(row = i,column = 5,value = strtxt)\n",
@@ -585,6 +585,169 @@
     "        break\n",
     "    i=i+1\n",
     "workbook.save(filename = \"excel_0517pm.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 20240610 PM excel 读取我的json文件并解析"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://pastebin.com/raw/5NHaxyGR 1 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://pastebin.com/raw/5NHaxyGR\n",
+      "http://肥猫.live 2 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=http://肥猫.live\n",
+      "https://raw.liucn.cc/box/m.json 3 正则失败 首次解析状态:200 https://raw.liucn.cc/box/m.json\n",
+      "http://小白.love/ 4 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=http://小白.love/\n",
+      "https://szyyds.cn/tv/x.json 5 正则失败 首次解析状态:200 https://szyyds.cn/tv/x.json\n",
+      "https://github.moeyy.xyz/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json 6 正则失败 首次解析状态:200 https://github.moeyy.xyz/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json\n",
+      "http://home.jundie.top:81/top98.json 7 正则失败 首次解析状态:200 http://home.jundie.top:81/top98.json\n",
+      "https://github.moeyy.xyz/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json 8 正则失败 首次解析状态:200 https://github.moeyy.xyz/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
+      "https://100km.top/0 9 正则失败 首次解析状态:200 https://100km.top/0\n",
+      "http://cdn.qiaoji8.com/tvbox.json 10 正则失败 首次解析状态:200 http://cdn.qiaoji8.com/tvbox.json\n",
+      "https://la.kstore.space/download/3376/ts.txt 11 正则失败 首次解析状态:200 https://la.kstore.space/download/3376/ts.txt\n",
+      "https://tvbox.wmmys.cn 12 正则失败 首次解析状态:200 https://tvbox.wmmys.cn\n",
+      "https://download.kstore.space/download/4645/Tvbox/myks/99.png 13 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://download.kstore.space/download/4645/Tvbox/myks/99.png\n",
+      "https://chuanshuo.77blog.cn/tv.json 14 正则失败 首次解析状态:200 https://chuanshuo.77blog.cn/tv.json\n",
+      "https://xhdwc.tk/0 15 正则失败 首次解析状态:200 https://xhdwc.tk/0\n",
+      "https://tv.youdu.fan:666/毒盒影视/ 16 正则失败 首次解析状态:200 https://tv.youdu.fan:666/毒盒影视/\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openpyxl\n",
+    "import requests\n",
+    "import json\n",
+    "import re,os\n",
+    "import warnings \n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "def refindvalue(respon): #输入respond,re正则判断单仓多仓，返回cang自定义文本\n",
+    "    try: #正常的操作\n",
+    "        mcang = re.search('sites',respon,re.M|re.I).group(0)\n",
+    "    except :#发生异常，执行这块代码\n",
+    "        try:\n",
+    "            scang = re.search('storeHouse',respon,re.M|re.I).group(0)\n",
+    "        except:#发生异常，执行这块代码\n",
+    "            try:\n",
+    "                xlu = re.search('urls',respon,re.M|re.I).group(0)\n",
+    "            except: #发生异常，执行这块代码\n",
+    "                return \"正则失败\"\n",
+    "            else: #如果没有异常执行这块代码\n",
+    "                return \"H单仓\"\n",
+    "        else:\n",
+    "            return \"H多仓\"\n",
+    "    else:\n",
+    "        return \"H线路\"\n",
+    "    \n",
+    "def addlink(url): #增加代理链接\n",
+    "    agentlink=\"http://fly.lyin.cf/?url=\"\n",
+    "    agentlink1=\"http://lige.unaux.com/?url=\"\n",
+    "    agentlink0=\"\"\n",
+    "    urll=agentlink1+url\n",
+    "    # print(\"代理网址： \"+urll)\n",
+    "    return urll\n",
+    "\n",
+    "def url_respon(url): #输入原始url,解析网站，返回url，respone等元组\n",
+    "    headers={\n",
+    "    \"Cookie\":\"__test=a864654f7055f72f7d6dcb20eebcdd42\",\n",
+    "    \"Host\":\"lige.unaux.com\",\n",
+    "    \"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36\",\n",
+    "    \"Connection\":\"keep-alive\"\n",
+    "    }\n",
+    "    proxy_url=addlink(url)  #增加代理函数\n",
+    "    try:\n",
+    "        respon=requests.get(url,verify=False,timeout =60)\n",
+    "        codema= respon.status_code\n",
+    "        if codema==200:\n",
+    "            # print(\"首次解析的网址返回状态： \"+str(codema)+\"- \"+url)\n",
+    "            conten=\"首次解析状态:\"+str(codema)\n",
+    "            return url,respon.text,conten\n",
+    "        else:\n",
+    "            respon1=requests.get(proxy_url,headers=headers,verify=False,timeout =60)  #增加代理1函数\n",
+    "            codema1= respon1.status_code\n",
+    "            # print(\"代理1网址返回状态： \"+str(codema)+\"- \"+proxy_url)\n",
+    "            conten1=\"代理1网址状态: \"+str(codema1)\n",
+    "            return proxy_url,respon1.text,conten1\n",
+    "    except:\n",
+    "        try:\n",
+    "            respon2=requests.get(proxy_url,headers=headers,verify=False,timeout =60)  #增加代理2函数\n",
+    "            codema2= respon2.status_code\n",
+    "            # print(\"代理2网址返回状态： \"+str(codema)+\"- \"+proxy_url)\n",
+    "            conten2=\"代理2网址状态: \"+str(codema2)\n",
+    "            return proxy_url,respon2.text,conten2\n",
+    "        except:\n",
+    "            # print(\"解析失败： \"+url)\n",
+    "            return url,\"000\",\"解析失败了: \"\n",
+    "\n",
+    "def jiexi(urll):\n",
+    "        analysis_respone=url_respon(urll) #返回元组，第一个是url，第二个是respon，第三个是状态内容\n",
+    "        # cang=findvalue(analysis_respone[1])\n",
+    "        cang=refindvalue(analysis_respone[1])\n",
+    "        # print(\"shuchu--\",cang,analysis_respone)\n",
+    "\n",
+    "        if cang==\"H单仓\":\n",
+    "            print(analysis_respone[2]+\" 单仓\"+\"-\"+analysis_respone[0])\n",
+    "        elif cang==\"H多仓\":\n",
+    "            print(analysis_respone[2] +\" 多仓\"+\"-\"+analysis_respone[0])\n",
+    "        elif cang==\"H线路\":\n",
+    "            print(analysis_respone[2]+\" 线路\"+\"-\"+analysis_respone[0])\n",
+    "        else:\n",
+    "            # pass\n",
+    "            print(analysis_respone[2]+\" 其他failure \"+\"-\"+analysis_respone[0])\n",
+    "        # print(\"=\"*30)\n",
+    "\n",
+    "i=1\n",
+    "excel_file = r'D:\\OneDrive\\Learn\\pythonLearn\\TvBox\\tvbox\\excel_xianlu.xlsx'\n",
+    "workbook = openpyxl.load_workbook(filename=excel_file)\n",
+    "sheet2= workbook['610']\n",
+    "for row in sheet2.iter_rows(values_only=True):\n",
+    "    if not (row[1]) is None :\n",
+    "        analysis_respone=url_respon(row[1]) \n",
+    "        strtxt=refindvalue(analysis_respone[2]) #返回解析结果,如单仓/多仓/失败\n",
+    "        # texxt=analysis_respone[1]  #返回 url的返回文本\n",
+    "        codetxt=analysis_respone[2]  #返回 url的返回状态 如200，400\n",
+    "        sheet2.cell(row = i,column = 4,value = strtxt)\n",
+    "        sheet2.cell(row = i,column = 5,value = codetxt)\n",
+    "        # sheet2.cell(row = i,column = 6,value = str(texxt))\n",
+    "        print(row[1],i,strtxt,codetxt,analysis_respone[0])\n",
+    "    else:\n",
+    "        break\n",
+    "    i=i+1\n",
+    "workbook.save(filename = \"excel_0610pm.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import re\n",
+    "import requests\n",
+    "headers={\n",
+    "    \"Cookie\":\"__test=a864654f7055f72f7d6dcb20eebcdd42\",\n",
+    "    \"Host\":\"lige.unaux.com\",\n",
+    "    \"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36\",\n",
+    "    \"Connection\":\"keep-alive\"\n",
+    "    }\n",
+    "\n",
+    "urls=\"https://tv.youdu.fan:666/cy/\"\n",
+    "a = requests.get(url=urls).text\n",
+    "print(a)\n",
+    "print (re.search(\"key\",a))\n",
+    "print (re.search(\"key\",a).group(0))   #123abc456,返回整体\n",
+    "# print (re.search(\"key\",a).group() )  #123\n"
    ]
   }
  ],
